@@ -882,6 +882,14 @@ struct Client {
 #define	CLIENT_LOCAL_SIZE sizeof(aClient)
 #define	CLIENT_REMOTE_SIZE offsetof(aClient,count)
 
+typedef struct _HStruct HStruct;
+
+struct _HStruct
+{
+	char			host[SCAN_HOSTLENGTH];
+	unsigned char	refcnt;
+};
+
 /*
  * conf2 stuff -stskeeps
 */
@@ -1099,7 +1107,11 @@ struct _configitem_log {
 struct _irchook {
 	ConfigFlag flag;
 	Hook *prev, *next;
-	int (*func)();
+	union
+	{
+		int (*intfunc)();
+		void (*voidfunc)();
+	} func;
 };
 
 /*
