@@ -86,7 +86,10 @@ void    l_commands_init(void)
 	m_chgident_init();
 	m_setident_init();
 	m_sdesc_init();
-	
+#ifdef SCAN_API
+	m_scan_init();
+	scan_dummy_init();
+#endif
 	module_buffer = &l_commands_info;
 }
 
@@ -100,7 +103,11 @@ void	l_commands_unload(void)
 	m_setname_unload();
 	m_chghost_unload();
 	m_chgident_unload();
-        m_setident_unload();
-        m_sdesc_unload();
+    m_setident_unload();
+    m_sdesc_unload();
+#ifdef SCAN_API
+	scan_dummy_unload();
+	m_scan_unload();
+#endif
 }
 
